<resources>
    <string name="app_name">DoLearn</string>
    <string name="topic">Topic</string>
    <string name="translate">Translate</string>
    <string name="note">Note</string>
    <string name="test">Test</string>
    <string name="setting">Setting</string>
    <string name="do_learn">Do Learn</string>
    <string name="learn_english_so_easy">Learn English so easy</string>
    <string name="logo">logo</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is Channel 1</string>

    <string-array name="topic_list">
        <item>Tự nhiên</item>
        <item>Con người</item>
        <item>Các mối quan hệ</item>
        <item>Sự vật xung quanh</item>
        <item>Cuộc sống thường ngày</item>
        <item>Công việc</item>
        <item>Nghệ thuật</item>
        <item>Truyền thông</item>
        <item>Liên lạc, Tin tức</item>
        <item>Các từ chỉ trạng thái, mức độ</item>
    </string-array>
    <string-array name="tunhien_list">
        <item>Động vật</item>
        <item>Cây cối</item>
        <item>Trái cây</item>
        <item>Rau củ</item>
        <item>Phong cảnh</item>
        <item>Thời tiết</item>
        <item>Môi trường</item>
        <item>Màu sắc</item>
    </string-array>
    <string-array name="connguoi_list">
        <item>Ngoại hình</item>
        <item>Cơ thể</item>
        <item>Tính cách</item>
        <item> Cảm xúc và cảm giác"</item>

    </string-array>
    <string-array name="cacmoiquanhe_list">
        <item>Gia đình</item>
        <item>Các mối quan hệ</item>
    </string-array>
    <string-array name="suvatxungquanh_list">
        <item>Quần áo</item>
        <item>Đồ ăn và thức uống</item>
        <item>Nhà cửa</item>
        <item>Thể thao</item>
        <item>Giao thông</item>
        <item>Phòng bếp</item>
        <item>Phòng khách</item>
        <item>Phòng ngủ</item>
        <item>Phòng tắm</item>
        <item>Thành phố</item>
    </string-array>
    <string-array name="cuocsongthuongngay_list">
        <item>Giáo dục</item>
        <item>Sức khoẻ</item>
        <item>Sở thích</item>
        <item>Mua sắm</item>
        <item>Du lịch</item>
        <item>Ngày và giờ</item>
        <item>Ngôn ngữ</item>
        <item>Ngày lễ tết</item>
    </string-array>
    <string-array name="congviec_list">
        <item>Công ty</item>
        <item>Công việc</item>
        <item>Đời sống công sở</item>
    </string-array>
    <string-array name="nghethuat_list">
        <item>Nghệ thuật</item>
    </string-array>
    <string-array name="truyenthong_list">
        <item>Máy tính và mạng internet</item>
    </string-array>
    <string-array name="lienlactintuc_list">
        <item>Điện thoại,thư tín, truyền hình, báo chí</item>
    </string-array>
    <string-array name="cactuchitrangthaimucdo_list">
        <item>Đo lường</item>
        <item>Tốc độ</item>
        <item>Tần suất</item>
        <item>Mức độ</item>
        <item>Vị trí</item>
        <item>Các từ chỉ sự tăng-giảm</item>
    </string-array>
    <string-array name="tunhien_eng_list">
        <item>Animals</item>
        <item>Plants</item>
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Landscape</item>
        <item>Weather</item>
        <item>Environment</item>
        <item>Colors</item>
    </string-array>
    <string-array name="connguoi_eng_list">
        <item>Appearance</item>
        <item>Body</item>
        <item>Personality</item>
        <item>Emotions and Feelings"</item>
    </string-array>
    <string-array name="cacmoiquanhe_eng_list">
        <item>Family</item>
        <item>Relationships</item>
    </string-array>
    <string-array name="suvatxungquanh_eng_list">
        <item>Clothing</item>
        <item>Foods and Drinks</item>
        <item>Houses and Buildings</item>
        <item>Sports</item>
        <item>Transportation</item>
        <item>Kitchen</item>
        <item>Living room</item>
        <item>Bedroom</item>
        <item>Bathroom</item>
        <item>City</item>
    </string-array>
    <string-array name="cuocsongthuongngay_eng_list">
        <item>Education</item>
        <item>Health</item>
        <item>Hobbies</item>
        <item>Shopping</item>
        <item>Traveling</item>
        <item>Dates and time</item>
        <item>Language</item>
        <item>Holiday</item>
    </string-array>
    <string-array name="congviec_eng_list">
        <item>Company</item>
        <item>Jobs</item>
        <item>Working life</item>
    </string-array>
    <string-array name="nghethuat_eng_list">
        <item>Arts</item>
    </string-array>
    <string-array name="truyenthong_eng_list">
        <item>Computer and the internet</item>
    </string-array>
    <string-array name="lienlactintuc_eng_list">
        <item>TVs and Newspaper</item>
    </string-array>
    <string-array name="cactuchitrangthaimucdo_eng_list">

        <item>Measurement</item>
        <item>Speed</item>
        <item>Frequency</item>
        <item>Degree</item>
        <item>Places</item>
        <item>Others</item>
    </string-array>

    <string name="engName"><font size="15">* Từ tiếng Anh</font></string>
    <string name="vieName"><font size="15">* Nghĩa tiếng Việt!</font></string>
    <string name="type"><font size="15">* Loại từ</font></string>
    <string name="pron"><font size="15">Phát âm</font></string>
    <string name="engExample"><font size="15">Ví dụ tiếng Anh</font></string>
    <string name="vieExample"><font size="15">Ví dụ tiếng Việt</font></string>

</resources>