<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:background="@drawable/background3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_learn"
                    android:textColor="@color/yellow"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingBottom="10dp"
                    android:text="@string/learn_english_so_easy"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo"/>
            </RelativeLayout>

            <GridLayout
                android:layout_marginTop="20dp"
                android:columnCount="1"
                android:rowCount="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_translate"
                    android:layout_margin="25dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:src="@drawable/winrar_1503044420"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>

                        <TextView
                            android:layout_marginLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/translate"
                            android:textColor="#6f6f6f"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="25dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/winrar_1503044420" />

                        <TextView
                            android:layout_marginLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/topic"
                            android:textColor="#6f6f6f"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView_note"
                    android:layout_margin="25dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:gravity="center">

                        <ImageView
                            android:src="@drawable/winrar_1503044420"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>

                        <TextView
                            android:layout_marginLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/note"
                            android:textColor="#6f6f6f"
                            android:textSize="30sp"  />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

<!--                <androidx.cardview.widget.CardView-->
<!--                    android:layout_margin="25dp"-->
<!--                    app:cardCornerRadius="12dp"-->
<!--                    app:cardElevation="6dp"-->
<!--                    android:layout_columnWeight="1"-->
<!--                    android:layout_rowWeight="1"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content">-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:padding="10dp"-->
<!--                        android:gravity="center">-->

<!--                        <ImageView-->
<!--                            android:src="@drawable/winrar_1503044420"-->
<!--                            android:layout_width="80dp"-->
<!--                            android:layout_height="80dp"/>-->

<!--                        <TextView-->
<!--                            android:layout_marginLeft="20dp"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/test"-->
<!--                            android:textColor="#6f6f6f"-->
<!--                            android:textSize="30sp" />-->
<!--                    </LinearLayout>-->
<!--                </androidx.cardview.widget.CardView>-->

                <androidx.cardview.widget.CardView
                    android:layout_margin="25dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:gravity="center">

                        <ImageView
                            android:src="@drawable/winrar_1503044420"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>

                        <TextView
                            android:layout_marginLeft="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/setting"
                            android:textColor="#6f6f6f"
                            android:textSize="30sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </GridLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>